syntax = "proto3";
package pb;
/* go_package  Нужно указать полный путь до пакета, где будут лежать сгенерированные файлы. */
option go_package = "/pb";
import "google/api/annotations.proto";

service Gateway {
  rpc FindFilm(Message) returns (Message) {
    option (google.api.http) = {
      post: "/findfilm"
      body: "*"
    };
  }
  rpc UpdateImage(Message) returns (Message) {
    option (google.api.http) = {
      post: "/updateimage"
      body: "*"
    };
}
    rpc GetImage(Message) returns (Message) {
    option (google.api.http) = {
      post: "/getimage"
      body: "*"
    };
  }
      rpc UpdateScore(Message) returns (Message) {
    option (google.api.http) = {
      post: "/getimage"
      body: "*"
    };
  }
}

message Message {
  int64 id = 1;
  string film = 2; 
  string img = 3;
  string api = 4;
  int64 user_id = 5;
  string user_name = 6;
  int64 score = 7;
  int64 result = 8;
}
